# Map_OpenCMS_Payments

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: deploy-frontend-pages.yml
analytics/: anomaly.py  centrality.py  community.py  concentration.py  export_json.py  precompute.py  precompute_embeddings.py  products.py  temporal.py
api/: main.py  schemas.py  utils.py
api/routers/: __init__.py  anomalies.py  centrality.py  communities.py  concentration.py  dashboard.py  graph.py  nodes.py  products.py  temporal.py
docs/: analytics-features.md  backend.md  data-analytics.md  frontend.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.svelte  app.css
graphlens/: config.py  etl.py  graph.py
processed/: edges_general.parquet  edges_ownership.parquet  edges_research.parquet  nodes.parquet  record_ids_general.parquet
processed/analytics_json/: all_anomaly_scores.json  all_capture_analysis.json  all_community_assignments.json  all_community_assignments_company_projection.json  all_community_assignments_physician_projection.json  all_community_summaries_bipartite.json  all_community_summaries_company_projection.json  all_community_summaries_physician_projection.json  all_concentration_credential.json  all_concentration_specialty.json  all_concentration_state.json  all_node_metrics.json  all_payment_distribution_credential.json  all_payment_distribution_global.json  all_payment_distribution_specialty.json  all_payment_distribution_state.json  (+158 more)
(+28 files in other folders)
